seedboxk8s/applications/x3/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: x3
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: x3
  template:
    metadata:
      labels:
        app: x3
    spec:
      containers:
        - image: registry.${clusterTld}/tortuga/x3:latest
          name: x3
          securityContext:
            runAsUser: ${plexUid}
            runAsGroup: ${plexGid}
          ports:
            - containerPort: 6969
          volumeMounts:
            - mountPath: /config
              name: x3-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: x3-config-pvc
          persistentVolumeClaim:
            claimName: x3-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
