seedboxk8s/applications/x3/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: x3
  namespace: tortuga
spec:
  replicas: 1
  serviceName: x3
  selector:
    matchLabels:
      app: x3
  template:
    metadata:
      labels:
        app: x3
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        - image: ${x3Image}:v0.31.1
          name: x3
          securityContext:
            runAsUser: ${plexUid}
            runAsGroup: ${plexGid}
          ports:
            - containerPort: 9999
          volumeMounts:
            - mountPath: /config
              name: x3-config-pvc
              readOnly: false
            - mountPath: /data
              name: seedboxmedia-nfs
              readOnly: false
      imagePullSecrets:
        - name: registry-k8s-dockerconfigjson
      volumes:
        - name: import
          emptyDir: {}
        - name: x3-config-pvc
          persistentVolumeClaim:
            claimName: x3-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
