seedboxk8s/applications/x3/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: x3
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: x3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9999
