seedboxk8s/applications/x3/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: x3
  namespace: tortuga
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Stash
    gethomepage.dev/group: Ao
    gethomepage.dev/icon: mdi-movie-filter
    gethomepage.dev/href: https://x3.${productionClusterFqdn}
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`x3.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: x3
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
